--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-
-<html lang="en">
-
-<h1>Jian Satumbaga-Personal Portfolio
+<html 
+lang="en">
+<h1>
+    Jian Satumbaga-Personal Portfolio
+    
 </h1>
 
 <body>
 Jian Satumbaga - Major - Web development
-</body>
+    </body>
 
 <p>My name is Jian Satumbaga and I plan to explore my opportunities and what ways I can grow 
 my education. I major web development. My hobbies are playing games, exercising, and tennis, 
 which I have trained for over four years. My personal goals are improving on my skills or 
-simply enjoying my relations though company and experiences.</p>
+simply enjoying my relations though company and experiences.
+    </p>
 
 </html>
