--- a/index.html
+++ b/index.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
-<html 
-lang="en">
-<h1>
-    Jian Satumbaga-Personal Portfolio
-    
+<html lang="en">
+<h1>Jian Satumbaga-Personal Portfolio
 </h1>
-
-<body>
-Jian Satumbaga - Major - Web development
-    </body>
-
-<p>My name is Jian Satumbaga and I plan to explore my opportunities and what ways I can grow 
-my education. I major web development. My hobbies are playing games, exercising, and tennis, 
-which I have trained for over four years. My personal goals are improving on my skills or 
-simply enjoying my relations though company and experiences.
+<!--Title and Major-->
+    <body>
+    Jian Satumbaga
+    <p>Major - Web development
     </p>
-
+    </body>
+<!--Biography section-->
+<div class="section1">
+    <h2>Bio</h2>
+    <p>Hello, I am Jian Satumbaga and I plan to explore my opportunities and what ways I can grow 
+    my education. I major web development. However, as of 2023 I am 17 and  My hobbies are 
+    playing games, exercising, and tennis, which I have trained for over four years. My personal 
+    goals are improving on my skills or simply enjoying my relations though company and experiences.
+    </p>
+<!--skill area and list-->
+</div>
+    <div class="list skills">
+    <h3>Skills</h3>
+    </div>
+<!--Projects list-->
+<!--Footer-->
 </html>
