--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
     </p>
     </body>
 <!--Biography section-->
-<div class="section1">
+<section class="section1">
     <h2>Bio</h2>
-    <p>Hello, I am Jian Satumbaga and I plan to explore my opportunities and what ways I can grow 
+    <article>Hello, I am Jian Satumbaga and I plan to explore my opportunities and what ways I can grow 
     my education. I major web development. However, as of 2023 I am 17 and  My hobbies are 
     playing games, exercising, and tennis, which I have trained for over four years. My personal 
     goals are improving on my skills or simply enjoying my relations though company and experiences.
-    </p>
+    </article>
 <!--skill area and list-->
-</div>
-    <div class="list skills">
+</section>
+
+<section class="list skills">
     <h3>Skills</h3>
-    </div>
+    <!--list (an actual bulleted list)-->
+    </section>
 <!--Projects list-->
 <!--Footer-->
 </html>
