--- a/index.html
+++ b/index.html
@@ -4,24 +4,25 @@
 </h1>
 <!--Title and Major-->
     <body>
-    Jian Satumbaga
-    <p>Major - Web development
+Jian Satumbaga
+    <p>Major: Web development
     </p>
     </body>
 <!--Biography section-->
 <section class="section1">
     <h2>Bio</h2>
-    <article>Hello, I am Jian Satumbaga and I plan to explore my opportunities and what ways I can grow 
-    my education. I major web development. However, as of 2023 I am 17 and  My hobbies are 
-    playing games, exercising, and tennis, which I have trained for over four years. My personal 
-    goals are improving on my skills or simply enjoying my relations though company and experiences.
-    </article>
-<!--skill area and list-->
+        <article>
+            <p>Hello, I am Jian Satumbaga and I plan to explore my opportunities and what ways I can grow 
+my education. I major web development. However, as of 2023 I am 17 and  My hobbies are 
+playing games, exercising, and tennis, which I have trained for over four years. My personal 
+goals are improving on my skills or simply enjoying my relations though company and experiences.
+            </p>
+        </article>
 </section>
-
+<!--skill area and list-->
 <section class="list skills">
     <h3>Skills</h3>
-    <!--list (an actual bulleted list)-->
+<!--list (an actual bulleted list)-->
     </section>
 <!--Projects list-->
 <!--Footer-->
