--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Jian Satumbaga
     <h2>Bio</h2>
         <article>
             <p>Hello, I am Jian Satumbaga and I plan to explore my opportunities and what ways I can grow 
-my education. I major web development. However, as of 2023 I am 17 and  My hobbies are 
+my education. I major web development. However, as of 2023 I am 17 and my ed and  My hobbies are 
 playing games, exercising, and tennis, which I have trained for over four years. My personal 
 goals are improving on my skills or simply enjoying my relations though company and experiences.
             </p>
@@ -21,9 +21,25 @@ goals are improving on my skills or simply enjoying my relations though company 
 </section>
 <!--skill area and list-->
 <section class="list skills">
-    <h3>Skills</h3>
 <!--list (an actual bulleted list)-->
+    <h3>Skills</h3>
+    <ul>
+    <li>1</li>
+    </ul>
     </section>
 <!--Projects list-->
-<!--Footer-->
+<h3>Projects</h3>
+    <ul>
+    <li>2-1</li>
+    <li>2-2</li>
+    <li>2-3</li>
+    </ul>
+<!--Footer with contact info-->
+<h3>Contact info</h3>
+<section class="Contact"> 
+    <ul>
+        <li>Phone number: 559-900-6726</li> 
+        <li>Email: JianSatumbaga@my.whccd.edu</li>
+    </ul>
+</section>
 </html>
