--- a/index.html
+++ b/index.html
@@ -12,34 +12,40 @@ Jian Satumbaga
 <section class="section1">
     <h2>Bio</h2>
         <article>
-            <p>Hello, I am Jian Satumbaga and I plan to explore my opportunities and what ways I can grow 
-my education. I major web development. However, as of 2023 I am 17 and my ed and  My hobbies are 
-playing games, exercising, and tennis, which I have trained for over four years. My personal 
-goals are improving on my skills or simply enjoying my relations though company and experiences.
+            <p>Hello, I am Jian Satumbaga and I plan to explore my opportunities and what ways 
+                I can grow my education. I major web development. However, as of 2023 I am 17 
+                and my ed and  My hobbies are playing games, exercising, and tennis, which I 
+                have trained for over four years. My personal goals are improving on my skills 
+                or simply enjoying my relations though company and experiences.
             </p>
         </article>
 </section>
 <!--skill area and list-->
 <section class="list skills">
 <!--list (an actual bulleted list)-->
-    <h3>Skills</h3>
+    <h2>Skills</h2>
     <ul>
-    <li>1</li>
+    <li>1-1</li>
+    <li>1-2</li>
+    <li>1-3</li>
     </ul>
-    </section>
+</section>
 <!--Projects list-->
-<h3>Projects</h3>
+<section class="Projects">
+    <h3>Projects</h3>
     <ul>
     <li>2-1</li>
     <li>2-2</li>
     <li>2-3</li>
     </ul>
+</section>
 <!--Footer with contact info-->
 <h3>Contact info</h3>
 <section class="Contact"> 
     <ul>
         <li>Phone number: 559-900-6726</li> 
         <li>Email: JianSatumbaga@my.whccd.edu</li>
+        <li>N/a Social media</li>
     </ul>
 </section>
 </html>
