--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@ Jian Satumbaga
     </p>
     </body>
 <!--Biography section-->
-<section class="section1">
+<section class="biography">
     <h2>Bio</h2>
         <article>
-            <p>Hello, I am Jian Satumbaga and I plan to explore my opportunities and what ways 
-                I can grow my education. I major web development. However, as of 2023 I am 17 
-                and my ed and  My hobbies are playing games, exercising, and tennis, which I 
-                have trained for over four years. My personal goals are improving on my skills 
-                or simply enjoying my relations though company and experiences.
+            <p>Hello, I am Jian Satumbaga and I plan to explore my opportunities and ways 
+                I can grow my education. I major web development. As of 2023 I am 17 and  
+                my hobbies are playing games, exercising, and tennis, which I have trained 
+                for over four years. My personal goals are to improve on my skills 
+                and grow my relations through company and experiences.
             </p>
         </article>
 </section>
@@ -25,18 +25,19 @@ Jian Satumbaga
 <!--list (an actual bulleted list)-->
     <h2>Skills</h2>
     <ul>
-    <li>1-1</li>
-    <li>1-2</li>
-    <li>1-3</li>
+    <p>I am dexterous and precise with my previous accomplishments but however I am presently
+unaware of my "technical" skills but I can learn quickly.
+</p>
     </ul>
 </section>
 <!--Projects list-->
 <section class="Projects">
     <h3>Projects</h3>
     <ul>
-    <li>2-1</li>
-    <li>2-2</li>
-    <li>2-3</li>
+    <li>N/a</li>
+    <p>I haven't worked on any previous projects but I have been able 
+to provide straight forward honest results to my audience.
+    </p>
     </ul>
 </section>
 <!--Footer with contact info-->
