--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ Jian Satumbaga
     <p>Major: Web development
     </p>
     </body>
-<!--Biography section-->
-<section class="biography">
-    <h2>Bio</h2>
+<!--Bio section-->
+<section class="Bio">
+    <h2>Biography</h2>
         <article>
             <p>Hello, I am Jian Satumbaga and I plan to explore my opportunities and ways 
                 I can grow my education. I major web development. As of 2023 I am 17 and  
