--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@ Jian Satumbaga
         </article>
 </section>
 <!--skill area and list-->
-<section class="list skills">
+<h2>Skills</h2>
+<section class="skills">
 <!--list (an actual bulleted list)-->
-    <h2>Skills</h2>
     <ul>
     <p>I am dexterous and precise with my previous accomplishments but however I am presently
 unaware of my "technical" skills but I can learn quickly.
@@ -31,8 +31,8 @@ unaware of my "technical" skills but I can learn quickly.
     </ul>
 </section>
 <!--Projects list-->
+<h3>Projects</h3>
 <section class="Projects">
-    <h3>Projects</h3>
     <ul>
     <li>N/a</li>
     <p>I haven't worked on any previous projects but I have been able 
