--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@ unaware of my "technical" skills but I can learn quickly.
 <section class="Projects">
 <ul>
 <li>N/a</li>
-<p>I haven't worked on any previous projects but I have been able 
+<li>I haven't worked on any previous projects but I have been able 
 to provide straight forward honest results to my audience.
-</p>
+</li>
 </ul>
 </section>
 
@@ -55,4 +55,5 @@ to provide straight forward honest results to my audience.
         <li>N/a Social media</li>
     </ul>
 </section>
+
 </html>
