--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@ Jian Satumbaga
 <section class="Bio">
 <h2>Biography</h2>
 <article>
-<p>Hello, I am Jian Satumbaga and I plan to explore my opportunities and ways 
+<li>Hello, I am Jian Satumbaga and I plan to explore my opportunities and ways 
 I can grow my education. I major web development. As of 2023 I am 17 and  
 my hobbies are playing games, exercising, and tennis, which I have trained 
 for over four years. My personal goals are to improve on my skills 
 and grow my relations through company and experiences.
-</p>
+</li>
 </article>
 </section>
 
@@ -29,9 +29,9 @@ and grow my relations through company and experiences.
 
 <!--list (an actual bulleted list)-->
 <ul>
-<p>I am dexterous and precise with my previous accomplishments but however I am presently
+<li>I am dexterous and precise with my previous accomplishments but however I am presently
 unaware of my "technical" skills but I can learn quickly.
-</p>
+</li>
 </ul>
 </section>
 
