--- a/index.html
+++ b/index.html
@@ -11,16 +11,15 @@ Jian Satumbaga
 </body>
 
 <!--Bio section-->
-<h2>Biography</h2>
+<h2>Biography
+</h2>
 <section class="Bio">
 <article>
-<ul><li>Hello, I am Jian Satumbaga and I plan to explore my opportunities and ways 
+Hello, I am Jian Satumbaga and I plan to explore my opportunities and ways 
 I can grow my education. I major web development. As of 2023 I am 17 and  
 my hobbies are playing games, exercising, and tennis, which I have trained 
 for over four years. My personal goals are to improve on my skills 
 and grow my relations through company and experiences.
-</li>
-</ul>
 </article>
 </section>
 
