--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@ Jian Satumbaga
 </p>
 </body>
 
+<h2>>Biography</h2>
 <!--Bio section-->
-<h2>Biography
-</h2>
 <section class="Bio">
 <article>
 Hello, I am Jian Satumbaga and I plan to explore my opportunities and ways 
@@ -24,7 +23,7 @@ and grow my relations through company and experiences.
 </section>
 
 <!--skill area and list-->
-<h2>Skills</h2>
+<h3>Skills</h3>
 <section class="skills">
 
 <!--list (an actual bulleted list)-->
@@ -47,7 +46,7 @@ to provide straight forward honest results to my audience.
 </section>
 
 <!--Footer with contact info-->
-<h3>Contact info</h3>
+<h4>Contact info</h4>
 <section class="Contact"> 
     <ul>
         <li>Phone number: 559-900-6726</li> 
