--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!--Title and Major-->
 <h1>Jian Satumbaga-Personal Portfolio
-</h1>
+</h1><!--Title and Major-->
 <body>
 Jian Satumbaga
 <p>Major: Web development
 </p>
 </body>
 
-<h2>>Biography</h2>
+<h2>Biography</h2>
 <!--Bio section-->
 <section class="Bio">
 <article>
